--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "clean": "rm -rf dist",
     "build": "npm run clean && babel src --out-dir dist --extensions '.ts,.tsx'",
-    "link": "npm unlink common_spells && npm link common_spells",
+    "link": "npm unlink common_spells && npm link && npm link common_spells",
     "type-check": "tsc --noEmit"
   },
   "repository": {
