--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "bin": {
     "fusrodah": "./dist/git/forcePush.js",
     "commit": "./dist/git/fullCommit.js",
-    "branch": "./dist/git/createBranch.js"
+    "branch": "./dist/git/createBranch.js",
+    "switch": "./dist/git/checkout.js"
   },
   "scripts": {
     "clean": "rm -rf dist",
     "build": "npm run clean && babel src --out-dir dist --extensions '.ts,.tsx'",
-    "link": "npm unlink common_spells && npm link && npm link common_spells",
+    "link": "npm link && npm link common_spells",
+    "permissions": "chmod +x ./dist/git/*",
+    "update": "npm run build && npm run link && npm run permissions",
     "type-check": "tsc --noEmit"
   },
   "repository": {
@@ -26,6 +29,7 @@
     "@types/node": "^20",
     "@types/shelljs": "^0.8.15",
     "chalk": "^4.0.0",
+    "inquirer": "^12.0.1",
     "shelljs": "^0.8.5"
   },
   "devDependencies": {
