--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "branch": "./dist/spells/git/createBranch.js",
     "switch": "./dist/spells/git/checkout.js",
     "pull": "./dist/spells/git/fullUpdate.js",
-    "feature": "./dist/spells/tm/testFeature.js"
+    "feature": "./dist/spells/tm/testFeature.js",
+    "nstall": "./dist/spells/install.js"
   },
   "scripts": {
     "clean": "rm -rf dist",
     "build": "npm run clean && babel src --out-dir dist --extensions '.ts,.tsx'",
     "link": "npm link && npm link common_spells",
+    "unlink": "npm unlink common_spells",
     "permissions": "chmod +x ./dist/spells/**/*",
-    "local:install": "npm run build && npm run link && npm run permissions",
+    "local:install": "npm run unlink && npm run build && npm run link && npm run permissions",
     "type-check": "tsc --noEmit"
   },
   "repository": {
@@ -28,10 +30,9 @@
   "author": "Brodie Balser",
   "license": "ISC",
   "dependencies": {
-    "@types/chalk": "^0.4.31",
     "@types/node": "^20",
     "@types/shelljs": "^0.8.15",
-    "chalk": "^4.0.0",
+    "colors": "^1.4.0",
     "inquirer": "^12.0.1",
     "shelljs": "^0.8.5"
   },
