MAIN: added loging to commit command

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "type": "commonjs",
   "bin": {
     "spells": "./dist/spells/help.js",
+    "nstall": "./dist/spells/install.js",
     "fusrodah": "./dist/spells/git/forcePush.js",
     "commit": "./dist/spells/git/fullCommit.js",
     "branch": "./dist/spells/git/createBranch.js",
     "switch": "./dist/spells/git/checkout.js",
     "pull": "./dist/spells/git/fullUpdate.js",
-    "feature": "./dist/spells/tm/testFeature.js",
-    "nstall": "./dist/spells/install.js"
+    "feature": "./dist/spells/tm/testFeature.js"
   },
   "scripts": {
     "clean": "rm -rf dist",
