--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "clean": "rm -rf dist",
-    "build": "npm run clean && babel src --out-dir dist --extensions '.ts,.tsx'",
+    "build": "npm run clean && tsc",
     "link": "npm link && npm link common_spells",
     "unlink": "npm unlink common_spells",
     "permissions": "chmod +x ./dist/spells/**/*",
@@ -30,26 +30,22 @@
   },
   "author": "Brodie Balser",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
+    "@eslint/js": "^9.22.0",
+    "@stylistic/eslint-plugin": "^4.2.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/shelljs": "^0.8.15",
+    "@typescript-eslint/parser": "^8.26.1",
     "colors": "^1.4.0",
+    "eslint": "^9.22.0",
+    "globals": "^16.0.0",
     "inquirer": "^12.0.1",
-    "shelljs": "^0.8.5"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.25.9",
-    "@babel/core": "^7.26.0",
-    "@babel/plugin-proposal-do-expressions": "^7.24.7",
-    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
-    "@babel/plugin-transform-runtime": "^7.24.7",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-typescript": "^7.26.0",
-    "@babel/runtime": "^7.25.0",
-    "@types/jest": "^29.5.12",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "typescript": "^5"
+    "jest": "^29.7.0",
+    "shelljs": "^0.8.5",
+    "ts-jest": "^29.3.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1"
   }
 }
