--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,23 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
+    "target": "ES2022",
     "module": "CommonJS",
-    "target": "ES6",
-    "allowJs": true,
-    "skipLibCheck": true,
+    "outDir": "dist",
+    "rootDir": "src",
     "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": false,
+    "moduleResolution": "Node",
     "esModuleInterop": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "incremental": true
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+    "types": ["node", "jest"]
   },
   "include": [
-    "**/*.ts",
-    "**/*.tsx"
+    "src"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist",
+    "**/*.spec.ts",
+    "**/*.spec.js"
   ]
 }
