--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "commonjs",
   "bin": {
-    "nav": "./dist/spells/navigations.js",
+    "nav": "./dist/spells/navigation.js",
     "spells": "./dist/spells/help.js",
     "nstall": "./dist/spells/install.js",
     "fusrodah": "./dist/spells/git/forcePush.js",
@@ -32,11 +32,12 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.22.0",
-    "@stylistic/eslint-plugin": "^4.2.0",
+    "@stylistic/eslint-plugin": "^4.4.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/shelljs": "^0.8.15",
-    "@typescript-eslint/parser": "^8.26.1",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
     "colors": "^1.4.0",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
