GITLAB: created folder and files
GITLAB: added getComments

GITLAB: updated readme and removed unused functions

GITLAB: created getDiffs

GITLAB: move git shared to its own folder

GITLAB: created async execute

GITLAB: fixed test features

GITLAB: refactored getComments

GITLAB: added getVariables

GITLAB: updated gitlab diffs

GITLAB: added checkForGlab

GITLAB: createRelease

GITLAB: fine tuned

GITLAB: updated docs

--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "branch": "./dist/spells/git/createBranch.js",
     "switch": "./dist/spells/git/checkout.js",
     "pull": "./dist/spells/git/fullUpdate.js",
-    "feature": "./dist/spells/tm/testFeature.js"
+    "feature": "./dist/spells/tm/testFeature.js",
+    "comments": "./dist/spells/gitlab/getComments.js",
+    "diffs": "./dist/spells/gitlab/getDiff.js",
+    "vars": "./dist/spells/gitlab/getVariable.js",
+    "release": "./dist/spells/gitlab/createRelease.js"
   },
   "scripts": {
     "clean": "rm -rf dist",
