FIXUP-1: updated fpush

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "spells": "./dist/spells/help.js",
     "nstall": "./dist/spells/install.js",
     "fusrodah": "./dist/spells/git/forcePush.js",
+    "fpush": "./dist/spells/git/forcePush.js",
     "commit": "./dist/spells/git/fullCommit.js",
     "branch": "./dist/spells/git/createBranch.js",
     "switch": "./dist/spells/git/checkout.js",
