GASTOWN: added gt-open

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "gt-setup": "./dist/spells/gastown/setup.js",
     "gt-run": "./dist/spells/gastown/run.js",
     "gt-cleanup": "./dist/spells/gastown/cleanup.js",
-    "gt-status": "./dist/spells/gastown/status.js"
+    "gt-status": "./dist/spells/gastown/status.js",
+    "gt-open": "./dist/spells/gastown/open.js"
   },
   "scripts": {
     "clean": "rm -rf dist",
